cmake_minimum_required(VERSION 3.28)
project(2001CPP)

set(CMAKE_CXX_STANDARD 26)

add_executable(main main.cpp)
add_executable(003A+B3 00InputOutput/003A+B3.cpp)
add_executable(004A+B4 00InputOutput/004A+B4.cpp)
add_executable(005A+B5 00InputOutput/005A+B5.cpp)
add_executable(006A+B6 00InputOutput/006A+B6.cpp)
add_executable(007A+B7 00InputOutput/007A+B7.cpp)
add_executable(008StringSort 00InputOutput/008StringSort.cpp)
add_executable(009StringSort2 00InputOutput/009StringSort2.cpp)
add_executable(010StringSort3 00InputOutput/010StringSort3.cpp)
add_executable(011LongLong 00InputOutput/011LongLong.cpp)
add_executable(HJ1 01Hj/HJ1.cpp)
add_executable(HJ2 01Hj/HJ2.cpp)
add_executable(HJ3 01Hj/HJ3.cpp)
add_executable(HJ4 01Hj/HJ4.cpp)
add_executable(HJ5 01Hj/HJ5.cpp)
add_executable(HJ6 01Hj/HJ6.cpp)
add_executable(HJ7 01Hj/HJ7.cpp)
add_executable(HJ8 01Hj/HJ8.cpp)
add_executable(HJ9 01Hj/HJ9.cpp)
add_executable(HJ10 01Hj/HJ10.cpp)
add_executable(HJ11 01Hj/HJ11.cpp)
add_executable(HJ13 01Hj/HJ13.cpp)
add_executable(HJ14 01Hj/HJ14.cpp)
add_executable(HJ15 01Hj/HJ15.cpp)