cmake_minimum_required(VERSION 3.28)
project(2001CPP)

set(CMAKE_CXX_STANDARD 26)

add_executable(main main.cpp)
add_executable(003A+B3 00InputOutput/003A+B3.cpp)
add_executable(004A+B4 00InputOutput/004A+B4.cpp)
add_executable(005A+B5 00InputOutput/005A+B5.cpp)
add_executable(006A+B6 00InputOutput/006A+B6.cpp)
add_executable(007A+B7 00InputOutput/007A+B7.cpp)
add_executable(008StringSort 00InputOutput/008StringSort.cpp)
add_executable(009StringSort2 00InputOutput/009StringSort2.cpp)
add_executable(010StringSort3 00InputOutput/010StringSort3.cpp)
add_executable(011LongLong 00InputOutput/011LongLong.cpp)
add_executable(HJ1 01Hj/HJ1.cpp)
add_executable(HJ2 01Hj/HJ2.cpp)
add_executable(HJ3 01Hj/HJ3.cpp)
add_executable(HJ4 01Hj/HJ4.cpp)
add_executable(HJ5 01Hj/HJ5.cpp)
add_executable(HJ6 01Hj/HJ6.cpp)
add_executable(HJ7 01Hj/HJ7.cpp)
add_executable(HJ8 01Hj/HJ8.cpp)
add_executable(HJ9 01Hj/HJ9.cpp)
add_executable(HJ10 01Hj/HJ10.cpp)
add_executable(HJ11 01Hj/HJ11.cpp)
add_executable(HJ13 01Hj/HJ13.cpp)
add_executable(HJ14 01Hj/HJ14.cpp)
add_executable(HJ15 01Hj/HJ15.cpp)
add_executable(001PakringLot 02HWD/001PakringLot.cpp)
add_executable(002EnglishInput 02HWD/002EnglishInput.cpp)
add_executable(003APIColony 02HWD/003APIColony.cpp)
add_executable(004LongMathExp 02HWD/004LongMathExp.cpp)
add_executable(005OpenSource 02HWD/005OpenSource.cpp)
add_executable(006VirtualFinance 02HWD/006VirtualFinance.cpp)
add_executable(007UniversalWords 02HWD/007UniversalWords.cpp)
add_executable(008NearHeight 02HWD/008NearHeight.cpp)
add_executable(009NucleicAcidTest 02HWD/009NucleicAcidTest.cpp)
add_executable(010GreedySinger 02HWD/010GreedySinger.cpp)
add_executable(011SimpleMemory 02HWD/011SimpleMemory.cpp)
add_executable(012Gemstone 02HWD/012Gemstone.cpp)
add_executable(013GameGroup 02HWD/013GameGroup.cpp)
add_executable(014PerformTasks 02HWD/014PerformTasks.cpp)
add_executable(015FindMode 02HWD/015FindMode.cpp)
add_executable(016FindChildren 02HWD/016FindChildren.cpp)
add_executable(017EmployeeDispatch 02HWD/017EmployeeDispatch.cpp)
add_executable(018Channel 02HWD/018Channel.cpp)