cmake_minimum_required(VERSION 3.28)
project(2002LeetCode)

set(CMAKE_CXX_STANDARD 26)

add_executable(2002LeetCode main.cpp
        leetcode/editor/cn/[1]两数之和.cpp
        leetcode/editor/cn/[49]字母异位词分组.cpp
        leetcode/editor/cn/[128]最长连续序列.cpp
        leetcode/editor/cn/[11]盛最多水的容器.cpp
        leetcode/editor/cn/[3]无重复字符的最长子串.cpp)
